--- a/src/components/Minesweeper.css
+++ b/src/components/Minesweeper.css
@@ -1,3 +1,5 @@
 body {
   font-family: sans-serif;
+  display: flex;
+  justify-content: center;
 }
